refactor: update imports to use Jakarta EE and improve method calls